--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Makoto Tanaka"
-  avatar           : "pic.jpg"
+  avatar           : "2025_closerphoto.jpg"
   bio              : "" #Your biography for the left-hand sidebar
   location         : #"Kunitachi, Tokyo"
   employer         :
