--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Makoto Tanaka"
 title_separator          : "-"
 name                     : &name "Makoto Tanaka"
-description              : > "I am a Ph.D. Candidate in Economics at the University of Virginia. My research interests are Monetary Economics, Macroeconomics, and Applied Time Series."
+description              : > I am a Ph.D. Candidate in Economics at the University of Virginia. My research interests are Monetary Economics, Macroeconomics, and Applied Time Series.
 #url                     : https://makotolenza.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "makotolenza/makotolenza.github.io"
