--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Makoto Tanaka"
 title_separator          : "-"
 name                     : &name "Makoto Tanaka"
 description              : &description ""
-#url                     : https://makotolenza.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#url                     : https://makototanaka94.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "makotolenza/makotolenza.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
